welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^FlowerPot:24: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^FlowerPot:26: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^FlowerPot:28: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^FlowerPot:31: error: not found: value leveBraisse
	baisseBrosse(); leveBraisse();
                        ^