welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
override def growFlowers() = {
	fleur(Color.red);
	for (i <- 1 to 3) { avance(); }
	fleur(Color.cyan);
	for (i <- 1 to 3) { recule(); }
	gauche(); recule(); recule(); droite();
	fleur(Color.orange);
	avance(); droite(); avance(); avance(); gauche();
	fleur(Color.green);
	for (i <- 1 to 5) { recule(); }
	fleur(Color.pink);
	recule();
}






def fleur(c:Color) = {
	setCouleurBrosse(c)
	baisseBrosse(); leveBraisse();
	avance(); avance();
	baisseBrosse(); leveBraisse();
	recule(); gauche(); avance();
	baisseBrosse(); leveBraisse();
	recule(); recule();
	baisseBrosse(); leveBraisse();
	avance();
	setCouleurBrosse(Color.yellow);
	baisseBrosse(); leveBraisse();
	droite();
}
